--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 <h2> علم داده و کاربردهای آن </h2>
 
 <p>به وب سایت مهندسی داده خوش آمدید. در این وب سایت، مطالب مرتبط با علم داده را با هم مرور خواهیم کرد.</p>
+</p> زهرا رستمی  .</p>
+</p> دانشجوی کارشناسی ارشد دانشگاه حکیم سبزواری.</p>
 
 </html>
