--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/typed.js@2.0.9.js"></script>
 
-    <title>Morteza Jalambadani</title>
+    <title>zahrarostami</title>
 
 </head>
 
@@ -28,7 +28,7 @@
                     <div class="col-12 text-center">
                         <img class="avatar" src="image/me.jpg" alt="Avatar">
                         <p class="full-name">
-                            Morteza Jalambadani
+                            zahrarostami
                         </p>
                         <p class="developer">
                             Developer
