--- a/index.html
+++ b/index.html
@@ -1,64 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
+html>
+	
 
+	<head> <title> وب سایت شخصی </title></head>
+	
 
-<head>
+	<body dir=rtl>
+	
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<h2> علم داده و کاربردهای آن </h2>
+	
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/index.css">
-    <link media="all" rel="stylesheet" href="css/font-awesome.min.css">
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/typed.js@2.0.9.js"></script>
+	<p>به وب سایت مهندسی داده خوش آمدید. در این وب سایت، مطالب مرتبط با علم داده را با هم مرور خواهیم کرد.</p>
+	</p> زهرا رستمی  .</p>
+	</p> دانشجوی کارشناسی ارشد علوم تصمیم و دانش ، دانشگاه حکیم سبزواری.</p>
+	
 
-    <title>zahrarostami</title>
+	</html>
 
-</head>
-
-<body>
-
-    <div class="container noselect h-100">
-        <div class="row h-100 justify-content-center align-items-center">
-            <div class="col-12">
-                <div class="row">
-                    <div class="col-12 text-center">
-                        <img class="avatar" src="image/me.jpg" alt="Avatar">
-                        <p class="full-name">
-                            zahrarostami
-                        </p>
-                        <p class="developer">
-                            Developer
-                        </p>
-                    </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-6 text-center">
-                        <i class="fa fa-github"></i>
-                        <i class="fa fa-stack-overflow"></i>
-                        <i class="fa fa-telegram"></i>
-                        <i class="fa fa-linkedin"></i>
-                        <i class="fa fa-google"></i>
-                        <i class="fa fa-instagram"></i>
-                    </div>
-                </div>
-                <div class="row justify-content-center mt-3">
-                    <div class="col-8 col-md-6 text-center">
-                        <input class="email-value w-100" value="" readonly/>
-                        <a class="fa fa-clipboard email-copy-to-clipboard"> </a>
-                  </div>
-        </div>
-    </div>
-
-
-<script type="application/javascript" src="js/index.js" ></script>
-
-</body>
-
-
-
-
-</html>
