--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
-html>
+<html>
 	
 
-	<head> <title> وب سایت شخصی </title></head>
+	<head> <title> personal website </title></head>
 	
 
 	<body dir=rtl>
 	
 
-	<h2> علم داده و کاربردهای آن </h2>
+	<h2> Science and its applications </h2>
 	
 
-	<p>به وب سایت مهندسی داده خوش آمدید. در این وب سایت، مطالب مرتبط با علم داده را با هم مرور خواهیم کرد.</p>
-	</p> زهرا رستمی  .</p>
-	</p> دانشجوی کارشناسی ارشد علوم تصمیم و دانش ، دانشگاه حکیم سبزواری.</p>
-	
-
+	</p> "My Name is zahra rostami "</p>
+</p>   I'm Student of Hakim Sabzevari University in Computer Sceince ,My main research interests is Data Mining and Programming 
+	</p>
 	</html>
 
